--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "seed": "tsx src/core/db/seed.ts"
+    "seed": "tsx src/core/db/seed.ts",
+    "postinstall": "prisma generate --schema=src/core/db/prisma.schema",
+    "vercel-build": "prisma generate --schema=src/core/db/prisma.schema && next build"
   },
   "dependencies": {
     "@prisma/client": "^6.16.1",
