--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint",
     "seed": "tsx src/core/db/seed.ts",
     "postinstall": "prisma generate --schema=src/core/db/prisma.schema",
-    "vercel-build": "prisma generate --schema=src/core/db/prisma.schema && next build"
+    "vercel-build": "prisma generate --schema=src/core/db/prisma.schema && prisma migrate deploy --schema=src/core/db/prisma.schema && next build"
   },
   "dependencies": {
     "@prisma/client": "^6.16.1",
