chore(structure): reorganize folders to Feature-Oriented Clean Architecture
- Move app/ to project root (Next.js App Router best practice)
- Promote core/, features/, components/, lib/ to root-level
- Place tests/ at root
- Add ADR/0001 for architecture and folder structure
- Consolidate styles into app/globals.css
- Keep Prisma schema in core/db/prisma.schema
- Update tsconfig paths and ESLint rules for clean imports

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "seed": "tsx src/core/db/seed.ts",
-    "postinstall": "prisma generate --schema=src/core/db/prisma.schema",
-    "vercel-build": "prisma generate --schema=src/core/db/prisma.schema && prisma migrate deploy --schema=src/core/db/prisma.schema && next build"
+    "seed": "tsx core/db/seed.ts",
+    "postinstall": "prisma generate --schema=core/db/prisma.schema",
+    "vercel-build": "prisma generate --schema=core/db/prisma.schema && prisma migrate deploy --schema=core/db/prisma.schema && next build"
   },
   "dependencies": {
     "@prisma/client": "^6.16.1",
